feat: config update & glossary formatting